CHANGES
=======

* Implement core Deckhand API framework
* Oslo config integration (#1)
* Add ChangeLog
* Initial commit