@@ -14,6 +14,29 @@
 
 from oslo_config import cfg
 
+CONF = cfg.CONF
+
+
+keystone_auth_group = cfg.OptGroup(
+    name='keystone_authtoken',
+    title='Keystone Authentication Options'
+)
+
+keystone_auth_opts = [
+    cfg.StrOpt(name='project_domain_name',
+               default='Default'),
+    cfg.StrOpt(name='project_name',
+               default='admin'),
+    cfg.StrOpt(name='user_domain_name',
+               default='Default'),
+    cfg.StrOpt(name='password',
+               default='devstack'),
+    cfg.StrOpt(name='username',
+               default='admin'),
+    cfg.StrOpt(name='auth_url',
+               default='http://127.0.0.1/identity/v3')
+]
+
 barbican_group = cfg.OptGroup(
     name='barbican',
     title='Barbican Options',
@@ -21,13 +44,25 @@ barbican_group = cfg.OptGroup(
 Barbican options for allowing Deckhand to communicate with Barbican.
 """)
 
-barbican_opts = []
+barbican_opts = [
+    cfg.StrOpt(
+        'api_endpoint',
+        sample_default='http://barbican.example.org:9311/',
+        help='URL override for the Barbican API endpoint.'),
+]
 
 
 def register_opts(conf):
     conf.register_group(barbican_group)
     conf.register_opts(barbican_opts, group=barbican_group)
 
+    conf.register_group(keystone_auth_group)
+    conf.register_opts(keystone_auth_opts, group=keystone_auth_group)
+
 
 def list_opts():
-    return {barbican_group: barbican_opts}
+    return {keystone_auth_group: keystone_auth_opts,
+            barbican_group: barbican_opts}
+
+
+register_opts(CONF)
